Fix: gap이 데스크탑 뷰에서도 적용되는 문제 해결

--- a/src/components/plate/Plate.module.scss
+++ b/src/components/plate/Plate.module.scss
@@ -3,14 +3,16 @@
 
 // FilterPlates
 .wrapper {
-  position: relative;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 12px;
   padding-bottom: 60px;
+
+  @include mobile {
+    gap: 11px;
+  }
 
   .container {
     height: 100%;
